fix modal height on mobile

--- a/src/pages/page-home/sections/section-agenda/style.styl
+++ b/src/pages/page-home/sections/section-agenda/style.styl
@@ -83,10 +83,9 @@
   flex-wrap: wrap
 
 .modal
-
   position: fixed
   width 100%
-  max-height: 35rem
+  max-height: 100vh
   max-width: 30rem
   left: 50%
   top: 50%
